--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -7,6 +7,8 @@
 
         <import type="com.match.statistics.util.wrapper.Resource" />
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.match.statistics.ui.statistics.StatisticsViewModel" />
@@ -16,8 +18,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:background="@color/pale_grey_two">
+        android:background="@color/pale_grey_two"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -29,30 +31,33 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll"
                 app:contentInsetEnd="0dp"
                 app:contentInsetStart="0dp"
-                >
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:layout_scrollFlags="scroll">
 
-                <com.match.statistics.ui.custom.profile.LayoutProfile
-                    android:id="@+id/layout_profile"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
+                    android:layout_height="wrap_content">
 
-                <com.match.statistics.ui.custom.analysis.LayoutAnalysis
-                    android:id="@+id/layout_analysis"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/layout_profile" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <com.match.statistics.ui.custom.profile.LayoutProfile
+                        android:id="@+id/layout_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:viewModel="@{viewModel}"
+                        tools:layout_height="251dp" />
+
+                    <com.match.statistics.ui.custom.analysis.LayoutAnalysis
+                        android:id="@+id/layout_analysis"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toBottomOf="@id/layout_profile"
+                        app:viewModel="@{viewModel}"
+                        tools:layout_height="90dp" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -62,6 +67,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
             android:orientation="vertical"
+            android:visibility="@{viewModel.summonerProfileState instanceof Resource.Success ? View.VISIBLE : View.GONE}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/item_match" />
