- added comments - added progressbar for paging adapter(Match history)

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -66,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
+            app:itemAnimator="@{null}"
             android:orientation="vertical"
             android:visibility="@{viewModel.summonerProfileState instanceof Resource.Success ? View.VISIBLE : View.GONE}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
