--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -221,7 +221,7 @@
                     android:id="@+id/tv_rank_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{match.gameType+` `+match.createDate}"
+                    android:text="@{match.gameType}"
                     android:textColor="@color/cool_grey"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
