--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -72,5 +72,22 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/item_match" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_scroll_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/ic_baseline_arrow_drop_up_24"
+            app:backgroundTint="@color/pale_grey_two"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="24dp"
+            android:scaleType="center"
+            app:fabCustomSize="40dp"
+            app:ensureMinTouchTargetSize="false"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:tint="@color/gunmetal"
+            app:layout_constraintRight_toRightOf="parent" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
