--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -81,7 +81,8 @@
             android:src="@drawable/ic_baseline_arrow_drop_up_24"
             app:backgroundTint="@color/pale_grey_two"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="24dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="50dp"
             android:scaleType="center"
             app:fabCustomSize="40dp"
             app:ensureMinTouchTargetSize="false"
